fix ie and edge scrollbar bug

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -6,18 +6,12 @@
 html {
   font-size: 62.5%;
   background: @secondary;
-  @supports not (scroll-snap-type: y mandatory) {
-    height: 100vh;
-    overflow-y: scroll;
-  }
 }
 
 #root {
-  @supports (scroll-snap-type: y mandatory) {
-    height: 100vh;
-    overflow-y: scroll;
-    scroll-snap-type: y mandatory;
-  }
+  height: 100vh;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
 }
 
 @import 'normalize.less';
